# showluv-ai

./: .gitignore  .pre-commit-config.yaml  app.py  dockerfile  image_generator.py  old-readme.md  pyproject.toml  readme.md  requirements.txt  schema.yml  text.txt
.github/workflows/: deploy.yml
AWS/nginx/: Dockerfile  default.conf
accounts/: forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  signup.html
core/: api.py  settings.py  urls.py
image_gen/: README.md  admin.py  models.py  serializers.py  urls.py  views.py
image_gen/docs/: complex_method_README.md  models_README.md  viewset_class_README.md
image_gen/migrations/: 0001_initial.py
photrek/: apps.py  energy-csv-script.py  energy_consumption.csv  test_energy_forecast_api.py  urls.py  views.py
staticfiles/: staticfiles.json
staticfiles/css/: main.1b348336e42c.css  main.css
streamlit/: .gitignore  Dockerfile  README.md  adr_axs5pmspipgz5k7qdqjo9nswtc_pb2.py  energy_forecaster.py  image_generator.py  requirements.txt
streamlit/.streamlit/: config.toml  secrets.toml
templates/: base.html  home.html
test2/: models.py  serializers.py  urls.py  views.py
test2/migrations/: 0001_initial.py  0002_remove_sale_unit_type_remove_sale_units_sold_and_more.py
utility/: schema_generator.py
youtube_to_twitter/: apps.py  authentication.py  authentication.schema.py  authentication_schema.py  mailgun_mailer.py  serializers.py  ses_mailer.py  tests.py  urls.py  views.py
