[tool.poetry]
name = "Trenches-AI-staff-productivity-tools"
version = "0.1.1"
description = "AI powered Content creation tools"
authors = ["Anthony Oliko"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"

annotated-types = "0.7.0"
anthropic = "0.30.1"
anyio = "4.4.0"
asgiref = "3.8.1"
attrs = "23.2.0"
boto3 = "1.34.131"
botocore = "1.34.138"
cachetools = "5.3.3"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
distro = "1.9.0"
Django = "5.0.6"
django-cors-headers = "4.4.0"
django-environ = "0.11.2"
django-extensions = "3.2.1"
django-jsonfield = "1.4.1"
django-storages = "1.14.3"
djangorestframework = "3.15.2"
drf-yasg = "1.21.7"
environ = "1.0"
filelock = "3.15.4"
fsspec = "2024.6.1"
google-api-core = "2.19.1"
google-api-python-client = "2.136.0"
google-auth = "2.31.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.0"
googleapis-common-protos = "1.63.2"
gunicorn = "23.0.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httplib2 = "0.22.0"
httpx = "0.27.0"
huggingface-hub = "0.23.4"
idna = "3.7"
inflection = "0.5.1"
Jinja2 = "3.1.4"
jiter = "0.5.0"
jmespath = "1.0.1"
jsonschema = "4.22.0"
jsonschema-specifications = "2023.12.1"
mysqlclient = "2.1.1"
oauthlib = "3.2.2"
openai = "1.35.10"
outcome = "1.3.0.post0"
packaging = "24.1"
pillow = "10.4.0"
proto-plus = "1.24.0"
protobuf = "5.27.2"
psycopg2-binary = "2.9.9"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pydantic = "2.8.0"
pydantic-core = "2.20.0"
pyparsing = "3.1.2"
PySocks = "1.7.1"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
PyYAML = "6.0.1"
referencing = "0.35.1"
requests = "2.28.2"
requests-oauthlib = "1.3.1"
rpds-py = "0.18.1"
rsa = "4.7.2"
s3transfer = "0.10.1"
selenium = "4.22.0"
setuptools = "70.1.0"
six = "1.16.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
sqlparse = "0.5.0"
tokenizers = "0.19.1"
tqdm = "4.66.4"
trio = "0.26.0"
trio-websocket = "0.11.1"
tweepy = "4.14.0"
typing-extensions = "4.12.2"
uritemplate = "4.1.1"
urllib3 = "1.26.19"
uWSGI = "2.0.26"
websocket-client = "1.8.0"
wheel = "0.43.0"
whitenoise = "6.7.0"
wsproto = "1.2.0"
youtube-transcript-api = "0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
